<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/activity_map_view_demo"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
   
   
    <LinearLayout  
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/top_btn">

        <Button android:id="@+id/sat" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Satellite"
            android:onClick="myClickHandler" android:padding="8dp" />

        <Button android:id="@+id/traffic" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Traffic"
            android:onClick="myClickHandler" android:padding="8dp" />

        <Button android:id="@+id/map" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Map"
            android:onClick="myClickHandler" android:padding="8dp" />
        
        <ToggleButton android:id="@+id/trackingToggleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOn="@string/button_stop_tracking"
			android:textOff="@string/button_start_tracking"
			android:padding="8dp"/>
<!--         <Button -->
<!--         android:id="@+id/btn_show_map" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/show_places_on_map" -->
<!--          /> -->
        
    </LinearLayout>
    
    <!-- Show on Map button -->
<!--         android:layout_alignParentBelow="true" -->
<!--         android:layout_marginTop="10dip" -->

   
    
</FrameLayout>







<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     xmlns:tools="http://schemas.android.com/tools" -->
<!--     android:layout_width="fill_parent" -->
<!--     android:layout_height="fill_parent" -->
<!--     android:orientation="vertical" -->
    
<!--     tools:context=".MapViewDemoActivity" > -->

<!--    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--         android:orientation="horizontal" android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content"> -->

<!--         <Button android:id="@+id/sat" android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" android:text="@string/Satellite" -->
<!--             android:onClick="myClickHandler" android:padding="8dp" /> -->

<!--         <Button android:id="@+id/traffic" android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" android:text="@string/Traffic" -->
<!--             android:onClick="myClickHandler" android:padding="8dp" /> -->

<!--         <Button android:id="@+id/map" android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" android:text="@string/Map" -->
<!--             android:onClick="myClickHandler" android:padding="8dp" /> -->
        
<!--         <ToggleButton android:id="@+id/trackingToggleButton" -->
<!-- 			android:layout_width="wrap_content" -->
<!-- 			android:layout_height="wrap_content" -->
<!-- 			android:textOn="@string/button_stop_tracking" -->
<!-- 			android:textOff="@string/button_start_tracking" -->
<!-- 			android:padding="12dp"> -->
            
<!--         </ToggleButton> -->
        

<!--     </LinearLayout> -->
    
   
<!--    <LinearLayout android:layout_width="fill_parent"  -->
<!-- 			android:layout_alignParentBottom="true" -->
<!--             android:layout_height="wrap_content" android:orientation="vertical" > -->

<!--             <EditText android:layout_width="fill_parent"  -->
<!--                 android:id="@+id/location" -->
<!--             android:layout_height="wrap_content"  -->
<!--             android:text="White House"/> -->

<!--             <Button android:id="@+id/geocodeBtn"  -->
<!-- 			android:layout_width="wrap_content"  -->
<!-- 			android:layout_height="wrap_content" -->
<!-- 			android:onClick="doClick" android:text="Find Location"/> -->
    
<!--     </LinearLayout> -->
   
  
<!--     <com.google.android.maps.MapView android:id="@+id/activity_map_view_demo" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:clickable ="true" -->
<!--         android:enabled="true" -->
<!--         android:apiKey ="@string/googleapikey_windows" /> -->

    

<!-- </LinearLayout>	 -->